--- a/src/tools_gpl/nesthd2/packages/nesthd2/CMakeLists.txt
+++ b/src/tools_gpl/nesthd2/packages/nesthd2/CMakeLists.txt
@@ -21,7 +21,8 @@ add_executable(${executable_name} ${sources} ${fortran_version_file})
 # Set dependencies
 set(oss_dependencies    deltares_common
                         deltares_common_c
-                        nefis)
+                        nefis
+                        m)
 
 # Add dependencies
 if (UNIX)
